Bugs Fixed For JWT Tokens For Admins